--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -26,7 +26,14 @@
       text-align: center;
       align-self: center;
     }
-
+    &__img {
+      &--desktop {
+        display: block;
+      }
+      &--mobile {
+        display: none;
+      }
+    }
     &__credits {
       margin-top: 1.5rem;
     }
